<resources>
    <string name="app_name">News App</string>
    <string name="news_list">News List</string>
    <string name="news_detail">News Detail</string>
    <string name="read_more">Read more</string>
    <string name="delimiter">…</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
</resources>