<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/category_business"
        android:title="@string/business"
        />
    <item
        android:id="@+id/category_entertainment"
        android:title="@string/entertainment"
        />
    <item
        android:id="@+id/category_general"
        android:title="@string/general"
        />
    <item
        android:id="@+id/category_health"
        android:title="@string/health"
        />
    <item
        android:id="@+id/category_science"
        android:title="@string/science"
        />
    <item
        android:id="@+id/category_sports"
        android:title="@string/sports"
        />
    <item
        android:id="@+id/category_technology"
        android:title="@string/technology"
        />
</menu>